Migrate to hytalegradle plugin